termbrowser: fixed layout issue with flipping terms

--- a/Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
+++ b/Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
@@ -87,7 +87,7 @@
 }
 	
 td.termbrowser {
-	padding: 0;
+	padding: 0px;
 	overflow: hidden;
 }
 	
